k8s/etcd.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: etcd-event-gateway
  labels:
    app: etcd-event-gateway
spec:
  serviceName: etcd-event-gateway
  selector:
    matchLabels:
      app: etcd-event-gateway
  replicas: 1
  template:
    metadata:
      labels:
        app: etcd-event-gateway
    spec:
      containers:
        - name: etcd-event-gateway
          image: gcr.io/etcd-development/etcd:v3.3.9
          command:
            - "/usr/local/bin/etcd"
          args:
            - "--advertise-client-urls=http://0.0.0.0:2379"
            - "--data-dir=/var/lib/etcd"
            - "--name=etcd0"
            - "--listen-client-urls=http://0.0.0.0:2379"
            - "--listen-peer-urls=http://0.0.0.0:2380"
            - "--initial-cluster-state=new"
            - "--initial-advertise-peer-urls=http://0.0.0.0:2380"
            - "--initial-cluster"
            - "etcd0=http://0.0.0.0:2380"
            - "--initial-cluster-token=events"
          volumeMounts:
            - name: etcd-data
              mountPath: /var/lib/etcd
  volumeClaimTemplates:
    - metadata:
        name: etcd-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: etcd-event-gateway
spec:
  ports:
    - name: etcd
      port: 2379
  selector:
    app: etcd-event-gateway
